# datapipe-image-moderation

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
datapipe_image_moderation/: google_vision.py  pipeline.py  utils.py  yandex_vision.py
tests/: conftest.py  docker-compose.yml  test_google_pipeline.py  test_yandex_pipeline.py  utils.py
tests/fixtures/: images.py
